添加一块西部数据HC560 20TB机械硬盘到Ceph集群中

--- a/cluster/001-infrastructure/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/001-infrastructure/rook-ceph/helm-ceph-cluster.yaml
@@ -143,6 +143,9 @@ spec:
               - name: "/dev/disk/by-id/scsi-SWDC_WUH722020BL5204_8LHPZ97R"
                 config:
                   deviceClass: "hdd"
+              - name: "/dev/disk/by-id/scsi-SWDC_WUH722020BL5204_8LHPZ1KR"
+                config:
+                  deviceClass: "hdd"
           - name: "home-server-sonic"
             devices:
               - name: "/dev/disk/by-id/nvme-INTEL_SSDPE2KX040T8_BTLJ848209YE4P0DGN"  # Intel P4510 4T U.2
