--- a/cluster/230-media-service/jackett/helm-release.yaml
+++ b/cluster/230-media-service/jackett/helm-release.yaml
@@ -12,12 +12,12 @@ spec:
       retries: 3
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: jackett
-      version: 11.7.2
+      # renovate: registryUrl=https://bjw-s.github.io/helm-charts
+      chart: app-template
+      version: 1.5.0
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: bjw-s-charts
         namespace: flux-system
       interval: 5m
   values:
@@ -31,10 +31,14 @@ spec:
     env:
       TZ: "Asia/Shanghai"
 
-    persistence:
-      config:
-        enabled: true
-        existingClaim: jackett-config
+    service:
+      main:
+        type: ClusterIP
+        ports:
+          http:
+            enabled: true
+            port: 6767
+            protocol: HTTP
 
     ingress:
       main:
@@ -49,3 +53,8 @@ spec:
                 pathType: Prefix
         tls:
           - secretName: "${SECRET_DOMAIN/./-}-tls"
+
+    persistence:
+      config:
+        enabled: true
+        existingClaim: jackett-config
