--- a/cluster/010-management-tools/librespeed/helm-release.yaml
+++ b/cluster/010-management-tools/librespeed/helm-release.yaml
@@ -12,17 +12,32 @@ spec:
       retries: 3
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: librespeed
-      version: 5.4.2
+      # renovate: registryUrl=https://bjw-s.github.io/helm-charts
+      chart: app-template
+      version: 1.5.0
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: bjw-s-charts
         namespace: flux-system
   values:
     image:
       repository: linuxserver/librespeed
       tag: version-5.2.4
+
+    env:
+      TZ: "Asia/Shanghai"
+      PUID: "1000"
+      PGID: "1000"
+
+    service:
+      main:
+        type: ClusterIP
+        ports:
+          http:
+            enabled: true
+            port: 80
+            protocol: HTTP
+
     ingress:
       main:
         enabled: true
