--- a/cluster/230-media-service/flaresolverr/helm-release.yaml
+++ b/cluster/230-media-service/flaresolverr/helm-release.yaml
@@ -12,12 +12,12 @@ spec:
       retries: 3
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: flaresolverr
-      version: 5.4.2
+      # renovate: registryUrl=https://bjw-s.github.io/helm-charts
+      chart: app-template
+      version: 1.5.0
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: bjw-s-charts
         namespace: flux-system
       interval: 5m
   values:
@@ -34,3 +34,12 @@ spec:
     securityContext:
       runAsUser: 1000
       runAsGroup: 1000
+
+    service:
+      main:
+        type: ClusterIP
+        ports:
+          http:
+            enabled: true
+            port: 8191
+            protocol: HTTP
