--- a/cluster/230-media-service/plex/helm-release.yaml
+++ b/cluster/230-media-service/plex/helm-release.yaml
@@ -12,12 +12,12 @@ spec:
       retries: 3
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: plex
-      version: 6.4.3
+      # renovate: registryUrl=https://bjw-s.github.io/helm-charts
+      chart: app-template
+      version: 1.5.0
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: bjw-s-charts
         namespace: flux-system
       interval: 5m
   values:
@@ -33,35 +33,25 @@ spec:
       PLEX_CLAIM: "${SECRET_PLEX_CLAIM}"
       ADVERTISE_IP: "${SECRET_PLEX_ADVERTISE_IP}"
 
-    persistence:
-      config:
-        enabled: true
-        existingClaim: plex-config
-      transcode:
-        enabled: true
-        existingClaim: plex-transcode
-        mountPropagation: HostToContainer
-      media:
-        enabled: true
-        mountPath: /media
-        existingClaim: media-files
-        mountPropagation: HostToContainer
-
     service:
       main:
-        primary: true
-        type: NodePort
+        type: LoadBalancer
+        externalTrafficPolicy: Local
+        #        annotations:
+        #          metallb.universe.tf/loadBalancerIPs: ""
         ports:
           http:
             enabled: true
             port: 32400
+            protocol: HTTP
+          dlna-tcp:
+            enabled: true
+            port: 32469
             protocol: TCP
-            targetPort: 32400
-            nodePort: 32400
-      dnla-tcp:
-        enabled: true
-      dnla-udp:
-        enabled: true
+          dlna-udp:
+            enabled: true
+            port: 1900
+            protocol: UDP
 
     ingress:
       main:
@@ -79,3 +69,17 @@ spec:
         tls:
           - secretName: "${SECRET_DOMAIN/./-}-tls"
           - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
+
+    persistence:
+      config:
+        enabled: true
+        existingClaim: plex-config
+      transcode:
+        enabled: true
+        existingClaim: plex-transcode
+        mountPropagation: HostToContainer
+      media:
+        enabled: true
+        mountPath: /media
+        existingClaim: media-files
+        mountPropagation: HostToContainer
