--- a/cluster/230-media-service/radarr/helm-release.yaml
+++ b/cluster/230-media-service/radarr/helm-release.yaml
@@ -12,12 +12,12 @@ spec:
       retries: 3
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: radarr
-      version: 16.3.2
+      # renovate: registryUrl=https://bjw-s.github.io/helm-charts
+      chart: app-template
+      version: 1.5.0
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: bjw-s-charts
         namespace: flux-system
       interval: 5m
   values:
@@ -35,15 +35,14 @@ spec:
       runAsUser: 1000
       runAsGroup: 1000
 
-    persistence:
-      config:
-        enabled: true
-        existingClaim: radarr-config
-      media:
-        enabled: true
-        mountPath: /media
-        existingClaim: media-files
-        mountPropagation: HostToContainer
+    service:
+      main:
+        type: ClusterIP
+        ports:
+          http:
+            enabled: true
+            port: 7878
+            protocol: HTTP
 
     ingress:
       main:
@@ -58,3 +57,13 @@ spec:
                 pathType: Prefix
         tls:
           - secretName: "${SECRET_DOMAIN/./-}-tls"
+
+    persistence:
+      config:
+        enabled: true
+        existingClaim: radarr-config
+      media:
+        enabled: true
+        mountPath: /media
+        existingClaim: media-files
+        mountPropagation: HostToContainer
