修改flux配置中的等待Kustomization名称

--- a/cluster/000-base/001-infrastructure.yaml
+++ b/cluster/000-base/001-infrastructure.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 10m0s
   dependsOn:
-    - name: 000-base
+    - name: flux-system
   path: ./cluster/001-infrastructure
   prune: false
   sourceRef:
