修复samba无法看到目录的问题

--- a/cluster/200-storage-service/samba/helm-release.yaml
+++ b/cluster/200-storage-service/samba/helm-release.yaml
@@ -40,6 +40,11 @@ spec:
           smb:
             enabled: true
             port: 445
+            protocol: TCP
+          netbios:
+            enabled: true
+            port: 139
+            protocol: TCP
 
     persistence:
       compressed-files:
@@ -60,7 +65,7 @@ spec:
         existingClaim: apple-timemachine-files
         mountPath: /mnt/apple-timemachine-files
 
-    configmap:
+    configMaps:
       config:
         enabled: true
         data:
