--- a/cluster/230-media-service/samba/helm-release.yaml
+++ b/cluster/230-media-service/samba/helm-release.yaml
@@ -40,6 +40,11 @@ spec:
           smb:
             enabled: true
             port: 445
+            protocol: TCP
+          netbios:
+            enabled: true
+            port: 139
+            protocol: TCP
 
     persistence:
       media-files:
@@ -49,7 +54,7 @@ spec:
         mountPath: /media
         mountPropagation: HostToContainer
 
-    configmap:
+    configMaps:
       config:
         enabled: true
         data:
