修复samba无法看到目录的问题

--- a/cluster/200-storage-service/samba/helm-release.yaml
+++ b/cluster/200-storage-service/samba/helm-release.yaml
@@ -41,10 +41,10 @@ spec:
             enabled: true
             port: 445
             protocol: TCP
-          netbios:
-            enabled: true
-            port: 139
-            protocol: TCP
+    #          netbios:
+    #            enabled: true
+    #            port: 139
+    #            protocol: TCP
 
     persistence:
       compressed-files:
