--- a/cluster/230-media-service/samba/helm-release.yaml
+++ b/cluster/230-media-service/samba/helm-release.yaml
@@ -53,6 +53,12 @@ spec:
         existingClaim: media-files
         mountPath: /media
         mountPropagation: HostToContainer
+      samba-config:
+        enabled: true
+        type: configMap
+        mountPath: /data/config.yml
+        readOnly: true
+
 
     configMaps:
       config:
