--- a/cluster/230-media-service/samba/helm-release.yaml
+++ b/cluster/230-media-service/samba/helm-release.yaml
@@ -47,18 +47,18 @@ spec:
     #            protocol: TCP
 
     persistence:
+      config:
+        enabled: true
+        type: configMap
+        name: samba-config
+        mountPath: /data/config.yml
+        readOnly: true
       media-files:
         enabled: true
         type: pvc
         existingClaim: media-files
         mountPath: /media
         mountPropagation: HostToContainer
-      config:
-        enabled: true
-        type: configMap
-        mountPath: /data/config.yml
-        readOnly: true
-
 
     configMaps:
       config:
