--- a/cluster/230-media-service/emby/helm-release.yaml
+++ b/cluster/230-media-service/emby/helm-release.yaml
@@ -83,6 +83,6 @@ spec:
         existingClaim: media-files
         mountPropagation: HostToContainer
 
-#    resources:
-#      limits:
-#        nvidia.com/gpu: 1
+    resources:
+      limits:
+        nvidia.com/gpu: 1
