--- a/cluster/102-virtual-machine/isos/windows11-22621.yaml
+++ b/cluster/102-virtual-machine/isos/windows11-22621.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: iso-windows11-22621
+  namespace: virtual-machine
 spec:
   accessModes:
     - ReadWriteOnce
