--- a/cluster/102-virtual-machine/vm-windows10/pvc.yaml
+++ b/cluster/102-virtual-machine/vm-windows10/pvc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: vmdisk-windows10
+  namespace: virtual-machine
 spec:
   accessModes:
     - ReadWriteOnce
