--- a/cluster/102-virtual-machine/vm-windows11/service.yaml
+++ b/cluster/102-virtual-machine/vm-windows11/service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vm-windows11-rdp
+  namespace: virtual-machine
 spec:
   ports:
     - protocol: TCP
