--- a/cluster/102-virtual-machine/kustomization.yaml
+++ b/cluster/102-virtual-machine/kustomization.yaml
@@ -2,6 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - vm-windows10
-  - vm-windows11
+#  - vm-windows10
+  #  - vm-windows11
   - namespace.yaml
